# SRW-10

./: .flake8  2d_main.py  README.md  RESULT_character.txt  atmosphere_GOST4401_81.csv  atmosphere_GOST4401_81.py  config  config_rocket  cxyz.py  field_direct  graphic_m.gpi  graphic_v.gpi  let_point_thy_path.py  libf2.py  libgeometry.py  pyproject.toml  shell.sh  trigonometria.py  windtower.py
gnuplot/: DUMP_graphic_ccxyz.txt  DUMP_graphic_m.txt  DUMP_graphic_vsum.txt  DUMP_graphic_xy.txt  graphic_fields.gpi  graphic_m.txt  graphic_vsum.gpi  graphic_xy.gpi
model/: 2d_main.py  RESULT_character.txt  atmosphere_GOST4401_81.py  config_enemy  config_rocket  crutch_scenario_b.py  field_direct  let_point_thy_path.py  libf2.py  windtower.py
model/cxyz/: TRUE_cxyz_cx_c.txt  cxyz_cx_c.txt  cxyz_cy_alpha.txt  cxyz_cy_c.txt  cxyz_cz_c.txt
scenario_g/: results.txt
